# IRMaSim

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
agent_examples/: actor_critic.py  actor_critic_random_selection.py  reinforce.py
batsim_platform/: platform.xml
devel_notes/: manual_style.sty  tensorflow_vs_pytorch.py
examples/Energy/: options_ener.json  options_heur.json  platform.json  workload.json
examples/action/: README.md  plotter.py
examples/backfill/: execute_experiments.sh  options.json  platform.json  workload_pack.json
examples/brute/: execute_experiments.sh  options_brute.json  options_minimal.json  workload.csv
examples/cal/: energy_comparison.gpl  (+3 more)
hdeeprm/: Job.py  Simulator.py  Statistics.py  agent.py  cmd.py  environment.py  manager.py  resource.py  util.py
irmasim/: BasicWorkloadManager.py  BruteSimulator.py  Changes_Cores.py  Job.py  JobQueue.py  Job_MPI.py  Job_seq.py  Options.py  Simulator.py  Statistics.py  Task.py  __meta__.py  agent.py  cmd.py  environment.py  manager.py  resource.py  util.py
pruebas_experimentales/: options.json  platform.json  resultados_pruebas.odt  statistics.json  traza1.1.json  traza1.2.json  traza1.3.json  traza2.1.json  traza2.2.json  traza3.json  traza5.json  traza6.json
test/: jobs.json  main.py  options.json  platform.json  test_agent_load.py  test_classic_agent.py  test_nb_runs.py  test_one_core_one_job.py  test_one_core_two_job.py  test_two_core_two_job.py  test_two_core_two_job_mem.py
utils/: join_workloads  rlscheduler2irmasim_plataform.py  swf2irmasim_workload.py
(+163 files in other folders)
