[metadata]
name = irmasim
version = attr: irmasim.VERSION
author = Mario Ibañez, Adrián Herrera, Esteban Stafford, Jose Luis Bosque
author_email = mario.ibanez@unican.es, esteban.stafford@unican.es
description = Intelligent Resource Manager Simulator (IRMaSim) is a tool to develop deep reinforcement learing resource managers.
long_description = file: README.rst
url = https://github.com/irmasim/IRMaSim
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    heterogeneous cluster simulator
    deep reinforcement learing workload manager

[options]
include_package_data = True
package_dir=
    =.
packages= find:
install_requires=
    gym
    numpy
    torch
    scipy
    irmasim
    path
    setuptools
    importlib
    sortedcontainers

[options.entry_points]
console_scripts =
    irmasim = irmasim.cmd:launch